Actualizacion de Codigo
Actualizacion del codigo para ejecutar javafx correctamente